--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my fast web</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>git config --global user.email "belayet1200@gmail.com"
+        git config --global user.name "belayet1200"</p>
 </body>
 </html>
